# Better-Binary-Quantization

./: .eslintrc.js  .gitignore  .npmrc  BIT_COUNT_LOOKUP_TABLE初始化开销.review.md  BetterBinary.study.md  Lucene102BinaryQuantization算法详解.md  README.md  TikTokTac.md  bench_output.txt  bitCountBytes函数冗余.review.md  computeBatchDotProductOptimized性能瓶颈.review.md  computeBatchDotProductOptimized计算量大.review.md  computeBatchDotProductOriginal计算量大.review.md  computeBatchQuantizedScores变量声明.review.md  computeBatchSimilarityScores性能瓶颈.review.md  computeBatchSimilarityScores条件判断开销.review.md  computeBatchSimilarityScores频繁调用getCorrectiveTerms.review.md  computeLoss循环开销.review.md  computeOriginalScore重复判断开销.review.md  computeQuantizedDotProduct循环冗余检查.review.md  computeQuantizedScore重复判断开销.review.md  computeStandardDeviation循环效率.review.md  computeVectorMagnitude循环冗余检查.review.md  compute_centroid_nested_loop_overhead.review.md  compute_correlation_inefficient_logic.review.md  compute_int1bit_dot_product_bitcount_overhead.review.md  compute_int4bit_dot_product_optimized_bitcount_overhead.review.md  compute_quantization_accuracy_loop_overhead.review.md  consoleWarn性能开销.review.md  cosine_normalization_overhead.review.md  createConcatenatedBuffer性能瓶颈.review.md  debug_scorer.js  debug_scorer.ts  getUnpackedVector重复调用开销.review.md  get_big_endian_int32_boundary_checks.review.md  get_cache_key_hashing_overhead.review.md  get_oversampled_topk_with_heap_final_sort_overhead.review.md  get_oversampled_topk_with_sort_map_filter_overhead.review.md  get_unpacked_vector_copy_overhead.review.md  (+34 more)
(+169 files in other folders)
