[package]
name = "better-binary-quantization"
version = "1.0.0"
authors = ["leolee9086"]
edition = "2021"
description = "Better Binary Quantization implementation in Rust for WebAssembly"
license = "MIT"
repository = "https://github.com/leolee9086/better-binary-quantization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
fastrand = "2.0"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# 优化WASM大小
opt-level = "s"  # 优化大小
lto = true       # 链接时优化
codegen-units = 1
panic = "abort"
strip = true     # 去除调试符号

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
